fix button alignment

--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,9 @@
 
 .MuiButtonBase-root {
   padding: 5px 5px !important;
+}
+
+#add-cart-icon {
   margin-left: 20% !important;
   margin-top: 10% !important;
 }
